--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,75 @@
+html,
+body {
+  background-color: #2E2E2E!important;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  color: #fff!important;
+}
+
+/* ========================== */
+/* Navbar */
+.navbar-nav>li>a{
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-right:20px;
+  color: #fff;
+}
+
+.navbar-toggler {
+  padding: .20rem .50rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid white;
+}
+
+.nav-link{
+  color: #fff !important;
+}
+
+.wrapper{
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  background-color: #151515;
+  clip-path: polygon(81% 0, 100% 0, 100% 50%, 100% 100%, 76% 100%);
+  transition: 0.5s all;
+}
+
+.navbar-brand{
+  color:#fff;
+  margin-bottom: 4px;
+  font-size: 27px;
+}
+
+.navbar-light:hover .wrapper{
+  clip-path: polygon(81% 0, 100% 0, 100% 50%, 100% 100%, 69% 100%);
+}
+
+.navbar-brand:hover{
+  color:#fff;
+}
+
+.navbar-light{
+  background-color: #3C3C3C;
+  color: #fff;
+}
+
+.all-show{
+  z-index: 10;
+}
+
+/* ============================ */
+/* Hero top */
+#particle-canvas {
+  width: 100%;
+  height: 100%;
+}
+
+/* ============================ */
+/* Card and aside */
 .abs,
 h2:after,
 .cards .card figcaption,
@@ -203,78 +275,7 @@ h2:after {
   transform: none;
 }
 
-
-
-
-
-html,
-body {
-  background-color: #2E2E2E!important;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  color: #fff!important;
-}
-
-/* Navbar */
-.navbar-nav>li>a{
-  text-transform: uppercase;
-  font-size: 14px;
-  margin-right:20px;
-  color: #fff;
-}
-
-.navbar-toggler {
-  padding: .20rem .50rem;
-  font-size: 1.25rem;
-  line-height: 1;
-  background-color: transparent;
-  border: 1px solid white;
-}
-
-.nav-link{
-  color: #fff !important;
-}
-
-.wrapper{
-  width: 100%;
-  position: absolute;
-  height: 100%;
-  background-color: #151515;
-  clip-path: polygon(81% 0, 100% 0, 100% 50%, 100% 100%, 76% 100%);
-  transition: 0.5s all;
-}
-
-.navbar-brand{
-  color:#fff;
-  margin-bottom: 4px;
-  font-size: 27px;
-}
-
-.navbar-light:hover .wrapper{
-  clip-path: polygon(81% 0, 100% 0, 100% 50%, 100% 100%, 69% 100%);
-}
-
-.navbar-brand:hover{
-  color:#fff;
-}
-
-.navbar-light{
-  background-color: #3C3C3C;
-  color: #fff;
-}
-
-.all-show{
-  z-index: 10;
-}
-
-/* Hero top */
-#particle-canvas {
-  width: 100%;
-  height: 100%;
-}
-
+/* ============================ */
 /* Footer */
 .footer {
   background-color: #3C3C3C;
